force-app/main/default/objects/Daily_Log__c/Daily_Log__c.object-meta.xml
<CustomObject>
    <label>Daily Log</label>
    <nameField>
        <displayFormat>Log -{00000}</displayFormat>
        <label>Dailylog ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>