force-app/main/default/objects/Daily_Log__c/fields/Companion__c.field-meta.xml
<CustomField>
    <fullName>Companion__c</fullName>
    <label>Companion</label>
    <length>100</length>
    <type>Text</type>
</CustomField>