force-app/main/default/objects/Daily_Log__c/fields/Day_ended_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_ended_Time__c</fullName>
    <description>Information about the end time,</description>
    <label>Day ended Time</label>
    <type>DateTime</type>
</CustomField>