force-app/main/default/objects/Daily_Log__c/fields/Day_started_Time__c.field-meta.xml
<CustomField>
    <fullName>Day_started_Time__c</fullName>
    <description>Information about the start time</description>
    <label>Day started Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>