force-app/main/default/objects/Daily_Log__c/fields/Distance_by_SF__c.field-meta.xml
<CustomField>
    <fullName>Distance_by_SF__c</fullName>
    <label>Distance by SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>