force-app/main/default/objects/Daily_Log__c/fields/Distance_Calculated_by_SF__c.field-meta.xml
<CustomField>
    <fullName>Distance_Calculated_by_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distance Calculated by SF</label>
    <type>Checkbox</type>
</CustomField>