force-app/main/default/objects/Daily_Log__c/fields/Is_System_Ended__c.field-meta.xml
<CustomField>
    <fullName>Is_System_Ended__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is System Ended</label>
    <type>Checkbox</type>
</CustomField>