force-app/main/default/objects/Daily_Log__c/fields/Last_Visit__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Visit</label>
    <referenceTo>Visit__c</referenceTo>
    <relationshipLabel>Daily Logs</relationshipLabel>
    <relationshipName>Daily_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>