force-app/main/default/objects/Daily_Log__c/fields/Last_Visit_Address__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Address__c</fullName>
    <label>Last Visit Address</label>
    <type>TextArea</type>
</CustomField>