force-app/main/default/objects/Daily_Log__c/fields/Last_Visit_Distance_SF__c.field-meta.xml
<CustomField>
    <fullName>Last_Visit_Distance_SF__c</fullName>
    <label>Last Visit Distance SF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>