force-app/main/default/objects/Daily_Log__c/fields/Odometer_Ending_Kms__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Ending_Kms__c</fullName>
    <description>Odometer readings recorded during the end day.</description>
    <label>Odometer Ending Kilometres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>