force-app/main/default/objects/Daily_Log__c/fields/Odometer_Starting_Kms__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Starting_Kms__c</fullName>
    <description>Odometer reading recorded during the start day.</description>
    <label>Odometer Starting Kilometres</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>