force-app/main/default/objects/Daily_Log__c/fields/Total_Distance_Calculated_by_ODM_Reading__c.field-meta.xml
<CustomField>
    <fullName>Total_Distance_Calculated_by_ODM_Reading__c</fullName>
    <description>Odometer Difference</description>
    <formula>IF( 
    AND(
        Odometer_Ending_Kms__c &gt; 0, 
        Odometer_Starting_Kms__c &gt;= 0,
        Odometer_Ending_Kms__c &gt;= Odometer_Starting_Kms__c
    ), 
    Odometer_Ending_Kms__c - Odometer_Starting_Kms__c, 
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Distance Calculated by ODM Reading</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>