force-app/main/default/objects/Daily_Log__c/fields/Total_KM_Travelled__c.field-meta.xml
<CustomField>
    <fullName>Total_KM_Travelled__c</fullName>
    <formula>KMs_Travelled__c + Last_visit_distance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total KM Travelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>