force-app/main/default/objects/Daily_Log__c/fields/Travel_Type__c.field-meta.xml
<CustomField>
    <fullName>Travel_Type__c</fullName>
    <label>Work Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Office</fullName>
            </value>
            <value>
                <fullName>Field - Home District</fullName>
            </value>
            <value>
                <fullName>Field - Other District</fullName>
            </value>
            <value>
                <fullName>Field - Other State</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
                <isActive>false</isActive>
                <label>Assigned</label>
            </value>
            <value>
                <fullName>Customer Demanded</fullName>
                <isActive>false</isActive>
                <label>Customer Demanded</label>
            </value>
            <value>
                <fullName>Field Other District</fullName>
                <isActive>false</isActive>
                <label>Field Other District</label>
            </value>
            <value>
                <fullName>Field Other State</fullName>
                <isActive>false</isActive>
                <label>Field Other State</label>
            </value>
            <value>
                <fullName>Headquarters</fullName>
                <isActive>false</isActive>
                <label>Headquarters</label>
            </value>
            <value>
                <fullName>Home District</fullName>
                <isActive>false</isActive>
                <label>Home District</label>
            </value>
            <value>
                <fullName>In-Office</fullName>
                <isActive>false</isActive>
                <label>In-Office</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Planned</fullName>
                <isActive>false</isActive>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Unplanned</fullName>
                <isActive>false</isActive>
                <label>Unplanned</label>
            </value>
            <value>
                <fullName>Up country</fullName>
                <isActive>false</isActive>
                <label>Up country</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>