force-app/main/default/objects/Daily_Log__c/fields/Vehicle_Used__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Used__c</fullName>
    <label>Vehicle Used</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal/own</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Public transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>