force-app/main/default/objects/Daily_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Day_started_Time__c</columns>
    <columns>Day_ended_Time__c</columns>
    <columns>Travel_Type__c</columns>
    <columns>KMs_Travelled__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>