force-app/main/default/objects/Daily_Log__c/listViews/This_Month.listView-meta.xml
<ListView>
    <fullName>This_Month</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Day_started_Time__c</columns>
    <columns>Day_ended_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month</label>
</ListView>