force-app/main/default/objects/Daily_Log__c/listViews/Yesterdays.listView-meta.xml
<ListView>
    <fullName>Yesterdays</fullName>
    <columns>NAME</columns>
    <columns>Travel_Type__c</columns>
    <columns>Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Yesterdays</label>
</ListView>